* Improved rendering of unknown entries * Improved attribute parsing * Added 0-based indexing for bibcite/bibshow * Made bibcite and bibshow templates more robust

--- a/templates/bibcite-numbered-note.twig
+++ b/templates/bibcite-numbered-note.twig
@@ -1,3 +1,3 @@
 {% for entry in entries %}
-<a class="papercite_bibcite" id="bibcite_{{ entry.index }}" href="#bibshow_{{ entry.index }}" title="{{ entry | striptags }}">{{ entry.index }}</a>
+<a class="bibcite" id="bibcite_{{ entry.key }}" href="#bibshow_{{ entry.key }}" title="{{ entry.entry | striptags }}">{{ entry.index + 1 }}</a>
 {% endfor %}
