* Fixed class name for [bibtex] shortcodes * Copied and pasted CM CSL style. Need to add a URL somehow.

--- a/templates/bibtex-unordered-list.twig
+++ b/templates/bibtex-unordered-list.twig
@@ -1,4 +1,4 @@
-<ul class="papercite_bibliography">
+<ul class="bibtex">
 {% for entry in entries %}
     <li>{{ entry.entry | raw }}</li>
 {% endfor %}
