--- a/templates/bibcite-numbered-note.twig
+++ b/templates/bibcite-numbered-note.twig
@@ -1,3 +1,1 @@
-{% for entry in entries %}
-<a class="bibcite" id="bibcite_{{ entry.key }}" href="#bibshow_{{ entry.key }}" title="{{ entry.entry | striptags }}">{{ entry.index + 1 }}</a>
-{% endfor %}
+{% for entry in entries %}<a class="bibcite" id="bibcite_{{ entry.key }}" href="#bibshow_{{ entry.key }}" title="{{ entry.entry | striptags }}">{{ entry.index + 1 }}</a>{% endfor %}
